--- a/docker-compose-windows.yaml
+++ b/docker-compose-windows.yaml
@@ -4,8 +4,8 @@ services:
     privileged: true
     network_mode: host
     environment:
-      - DISPLAY=:0.0
-      - QT_X11_NO_MITSHM=1
+    - DISPLAY=host.docker.internal:0.0
+    - QT_X11_NO_MITSHM=1
 
     build:
       context: .
